[gd_scene load_steps=2 format=3 uid="uid://c04xw2xw55k3e"]

[ext_resource type="Script" uid="uid://djlr4ctfw1kca" path="res://bullet/base/script/bullet_base.gd" id="1_crkyv"]

[node name="BulletBase" type="Area2D"]
script = ExtResource("1_crkyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
